<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SenderDetail">

    <!-- Top Curve -->
    <ImageView
        android:id="@+id/topCurve"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/up_curve"
        android:scaleType="fitEnd"
        android:contentDescription="@string/top_curve_desc"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/senderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sender_details"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/senderdetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topCurve" />

    <LinearLayout
        android:id="@+id/senderdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/bottomButtons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/senderTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sender_full_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sender_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/contact_number"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/s_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="phone"
            android:hint="@string/enter_contact_number"
            android:inputType="phone"
            android:padding="15dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/bottomCurve"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bottom_curve_desc"
        android:scaleType="fitXY"
        android:src="@drawable/down_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Bottom Buttons -->
    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/r_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginEnd="50dp"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/r_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="50dp"
            android:textSize="14sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>