<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParcelType">

    <ImageView
        android:id="@+id/topCurve"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/up_curve"
        android:scaleType="fitEnd"
        android:contentDescription="@string/top_curve_desc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/parcelTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/parcel_type"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topCurve"
        android:layout_marginTop="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parcelTypeContentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottomButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parcelTypeTitle">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="189dp" />

        <Button
            android:id="@+id/btn_documents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_background"
            android:elevation="4dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/documents"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/btn_electronics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_background"
            android:elevation="4dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/electronics"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/guideline_center"
            app:layout_constraintTop_toTopOf="@id/btn_documents"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/btn_clothing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_background"
            android:elevation="4dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/clothing"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
            app:layout_constraintTop_toBottomOf="@id/btn_documents"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/btn_others"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_background"
            android:elevation="4dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/others"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/guideline_center"
            app:layout_constraintTop_toTopOf="@id/btn_clothing"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_if_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/if_others"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_clothing" />

        <EditText
            android:id="@+id/others_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/rounded_edittext_background"
            android:gravity="top|start"
            android:hint="@string/please_specify"
            android:inputType="textMultiLine"
            android:minHeight="80dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_if_others"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_if_others"
            app:layout_constraintTop_toTopOf="@id/tv_if_others"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/bottomCurve"
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:contentDescription="@string/bottom_curve_desc"
        android:scaleType="fitXY"
        android:src="@drawable/down_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/pt_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginEnd="50dp"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/pt_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="50dp"
            android:textSize="14sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>