<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weight">

    <!-- Top Curve -->
    <ImageView
        android:id="@+id/topCurve"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/up_curve"
        android:scaleType="fitEnd"
        android:contentDescription="@string/top_curve_desc"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Place Your Parcel on the Scale"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topCurve"/>

    <LinearLayout
        android:id="@+id/w_bottomButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/w_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginEnd="50dp"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/w_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="50dp"
            android:textSize="14sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>