<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".StartActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitEnd"
            android:src="@drawable/up_curve"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:shadowColor="#0C0C0C"
            android:text="@string/smart_courierservice_machine"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:text="@string/send_normal_parcel"
            android:background="@drawable/rectangle"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_urgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/send_urgent_parcel"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:background="@drawable/rectangle"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="fitXY"
            android:src="@drawable/down_curve"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
